--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -79,3 +79,23 @@
     width: 90%;
     background-color: rgb(199, 47, 47);
 }
+
+.about__boxes {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1.875rem;
+    margin-top: 4.35rem;
+}
+
+.about__box {
+    display: flex;
+    column-gap: 1.5rem;
+}
+
+.about__icon {
+    font-size: var(--h1-font-size);
+    color: #dedeea;
+}
+
+.about__title {
+    font-size: 1.875rem;
+}
